--- a/In Class Projects/Project 9 - Partial Correlations and Directed Acyclic Graphs.ipynb
+++ b/In Class Projects/Project 9 - Partial Correlations and Directed Acyclic Graphs.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Statisticians have, historically, not been fond of making causal claims using statistics aside from the causal inferences generated from randomized control trials. In recent decades, however, the statisticians behind the causal inference revolution have move precisely in this direction. In this lesson, we will consider a particular manifestation of the causal inference revolution: Directed Acyclic Graphs (DAGs). DAGs provide a causal map, creating a causal skeleton detected using computational methods.\n",
     "\n",
-    "In order to understand DAGs, we must first take review the concept of partial correlation. A partial correlation is a correlation that controls for changes in a set of control variables. Fortunately, we can calculate partial correlations using a set of ordinary least squares regression. Suppose that we want to calculate the partial correlation of variables $Q$ and $X$ controlling for $Y$ and $Z$. This would be accomplished by running four regressions, one for each variable. Across the set of regressions, each variable of interest is treated as the endogenous variable with the remaining variables be treated as exogensous variables. We can envision a vector of y vectors:\n",
+    "In order to understand DAGs, we must first review the concept of partial correlation. A partial correlation is a correlation that controls for changes in a set of control variables. Fortunately, we can calculate partial correlations using a set of ordinary least squares regression. Suppose that we want to calculate the partial correlation of variables $Q$ and $X$ controlling for $Y$ and $Z$. This would be accomplished by running four regressions, one for each variable. Across the set of regressions, each variable of interest is treated as the endogenous variable with the remaining variables be treated as exogenous variables. We can envision a vector of y vectors:\n",
     "\n",
     "$y = [y_j, y_{j+1}, . . . , y_{n-1}, y_n]$\n",
     "\n",
@@ -18,7 +18,7 @@
     "\n",
     "$y_j = \\beta_0 +\\sum^{m}_{j=1}\\beta_j x_{i,j} + \\epsilon_j$\n",
     "\n",
-    "To aid our understanding of this process, we will create 5 variables using a random number generator. We will first calculate partial correlations among these variables. Then we will generate a undirected graph that will form the basis of the directed acyclic graph that we ultimately aim to build. Since we created the variables, we know which variable *causes* another."
+    "To aid our understanding of this process, we will create 5 variables using a random number generator. We will first calculate partial correlations among these variables. Then we will generate an undirected graph that will form the basis of the directed acyclic graph that we ultimately aim to build. Since we created the variables, we know which variable *causes* another."
    ]
   },
   {
