--- a/In Class Projects/Project 10 - Chapter 8 - Advanced Data Analysis.ipynb
+++ b/In Class Projects/Project 10 - Chapter 8 - Advanced Data Analysis.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "# index_col = [0,2] will select  countrycode as the primary index and year as \n",
     "# the secondary index\n",
-    "data = pd.read_excel(\"mpd2018.xlsx\", \n",
+    "data = pd.read_excel(\"https://www.rug.nl/ggdc/historicaldevelopment/maddison/data/mpd2018.xlsx\", \n",
     "                     sheet_name = \"Full data\", \n",
     "                     index_col = [0,2])"
    ]
@@ -5427,7 +5427,7 @@
  "metadata": {
   "hide_code_all_hidden": true,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5441,7 +5441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
