--- a/Projects/EFW/Project 9 - Partial Correlations and Directed Acyclic Graphs.ipynb
+++ b/Projects/EFW/Project 9 - Partial Correlations and Directed Acyclic Graphs.ipynb
@@ -181,14 +181,7 @@
     "sigma = 5\n",
     "\n",
     "\n",
-    "lst_dct = {col:[] for col in cols}\n",
-    "for i in range(length):\n",
-    "    lst_dct[\"P\"].append(25 + np.random.normal(mu, .5 * sigma))\n",
-    "    lst_dct[\"Q\"].append(50 + np.random.normal(mu, sigma))\n",
-    "    lst_dct[\"X\"].append(3 * lst_dct[\"Q\"][-1]  + np.random.normal(mu, sigma ))\n",
-    "    lst_dct[\"Y\"].append(lst_dct[\"Q\"][-1] * -1 +  np.random.normal(mu, sigma))\n",
-    "    lst_dct[\"Z\"].append(\n",
-    "        lst_dct[\"P\"][-1] * 2 +  1.5 * lst_dct[\"X\"][-1] -  lst_dct[\"Y\"][-1] * 2 +  np.random.normal(mu,  sigma))\n",
+    "lstc ] -  lst_dct[\"Y\"][-1] * 2 +  np.random.normal(mu,  sigma))\n",
     "\n",
     "df = pd.DataFrame(lst_dct)\n",
     "df"
@@ -1427,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1651,12 +1644,14 @@
        "[6840 rows x 7 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "data = pd.read_csv(\"fraserDataWithRGDPPC.csv\", \n",
     "                   index_col=[0,1],\n",
     "                  parse_dates = True).dropna()\n",
@@ -1669,6 +1664,250 @@
     "                                         names =data.index.names)\n",
     "data = data.reindex(multi_index)\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>EFW</th>\n",
+       "      <th>Size of Government</th>\n",
+       "      <th>Legal System &amp; Property Rights</th>\n",
+       "      <th>Sound Money</th>\n",
+       "      <th>Freedom to trade internationally</th>\n",
+       "      <th>Regulation</th>\n",
+       "      <th>RGDP Per Capita</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ISO_Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AGO</th>\n",
+       "      <th>2002-01-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ALB</th>\n",
+       "      <th>2002-01-01</th>\n",
+       "      <td>6.516060</td>\n",
+       "      <td>7.700479</td>\n",
+       "      <td>4.758499</td>\n",
+       "      <td>7.023107</td>\n",
+       "      <td>6.279986</td>\n",
+       "      <td>6.818227</td>\n",
+       "      <td>5883.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ARE</th>\n",
+       "      <th>2002-01-01</th>\n",
+       "      <td>7.124558</td>\n",
+       "      <td>5.794031</td>\n",
+       "      <td>5.748454</td>\n",
+       "      <td>8.090451</td>\n",
+       "      <td>8.176407</td>\n",
+       "      <td>7.813447</td>\n",
+       "      <td>113817.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ARG</th>\n",
+       "      <th>2002-01-01</th>\n",
+       "      <td>6.241571</td>\n",
+       "      <td>7.789725</td>\n",
+       "      <td>3.606370</td>\n",
+       "      <td>7.010450</td>\n",
+       "      <td>6.961704</td>\n",
+       "      <td>5.839603</td>\n",
+       "      <td>12609.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ARM</th>\n",
+       "      <th>2002-01-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VNM</th>\n",
+       "      <th>2002-01-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YEM</th>\n",
+       "      <th>2002-01-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZAF</th>\n",
+       "      <th>2002-01-01</th>\n",
+       "      <td>6.923277</td>\n",
+       "      <td>6.470957</td>\n",
+       "      <td>5.413124</td>\n",
+       "      <td>7.731131</td>\n",
+       "      <td>7.694749</td>\n",
+       "      <td>7.306425</td>\n",
+       "      <td>9690.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZMB</th>\n",
+       "      <th>2002-01-01</th>\n",
+       "      <td>6.266813</td>\n",
+       "      <td>5.787088</td>\n",
+       "      <td>5.044351</td>\n",
+       "      <td>7.181346</td>\n",
+       "      <td>7.522252</td>\n",
+       "      <td>5.799028</td>\n",
+       "      <td>2071.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZWE</th>\n",
+       "      <th>2002-01-01</th>\n",
+       "      <td>3.625483</td>\n",
+       "      <td>5.514469</td>\n",
+       "      <td>3.405224</td>\n",
+       "      <td>1.250000</td>\n",
+       "      <td>3.002611</td>\n",
+       "      <td>4.955112</td>\n",
+       "      <td>2054.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>152 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          EFW  Size of Government  \\\n",
+       "ISO_Code Year                                       \n",
+       "AGO      2002-01-01       NaN                 NaN   \n",
+       "ALB      2002-01-01  6.516060            7.700479   \n",
+       "ARE      2002-01-01  7.124558            5.794031   \n",
+       "ARG      2002-01-01  6.241571            7.789725   \n",
+       "ARM      2002-01-01       NaN                 NaN   \n",
+       "...                       ...                 ...   \n",
+       "VNM      2002-01-01       NaN                 NaN   \n",
+       "YEM      2002-01-01       NaN                 NaN   \n",
+       "ZAF      2002-01-01  6.923277            6.470957   \n",
+       "ZMB      2002-01-01  6.266813            5.787088   \n",
+       "ZWE      2002-01-01  3.625483            5.514469   \n",
+       "\n",
+       "                     Legal System & Property Rights  Sound Money  \\\n",
+       "ISO_Code Year                                                      \n",
+       "AGO      2002-01-01                             NaN          NaN   \n",
+       "ALB      2002-01-01                        4.758499     7.023107   \n",
+       "ARE      2002-01-01                        5.748454     8.090451   \n",
+       "ARG      2002-01-01                        3.606370     7.010450   \n",
+       "ARM      2002-01-01                             NaN          NaN   \n",
+       "...                                             ...          ...   \n",
+       "VNM      2002-01-01                             NaN          NaN   \n",
+       "YEM      2002-01-01                             NaN          NaN   \n",
+       "ZAF      2002-01-01                        5.413124     7.731131   \n",
+       "ZMB      2002-01-01                        5.044351     7.181346   \n",
+       "ZWE      2002-01-01                        3.405224     1.250000   \n",
+       "\n",
+       "                     Freedom to trade internationally  Regulation  \\\n",
+       "ISO_Code Year                                                       \n",
+       "AGO      2002-01-01                               NaN         NaN   \n",
+       "ALB      2002-01-01                          6.279986    6.818227   \n",
+       "ARE      2002-01-01                          8.176407    7.813447   \n",
+       "ARG      2002-01-01                          6.961704    5.839603   \n",
+       "ARM      2002-01-01                               NaN         NaN   \n",
+       "...                                               ...         ...   \n",
+       "VNM      2002-01-01                               NaN         NaN   \n",
+       "YEM      2002-01-01                               NaN         NaN   \n",
+       "ZAF      2002-01-01                          7.694749    7.306425   \n",
+       "ZMB      2002-01-01                          7.522252    5.799028   \n",
+       "ZWE      2002-01-01                          3.002611    4.955112   \n",
+       "\n",
+       "                     RGDP Per Capita  \n",
+       "ISO_Code Year                         \n",
+       "AGO      2002-01-01              NaN  \n",
+       "ALB      2002-01-01           5883.0  \n",
+       "ARE      2002-01-01         113817.0  \n",
+       "ARG      2002-01-01          12609.0  \n",
+       "ARM      2002-01-01              NaN  \n",
+       "...                              ...  \n",
+       "VNM      2002-01-01              NaN  \n",
+       "YEM      2002-01-01              NaN  \n",
+       "ZAF      2002-01-01           9690.0  \n",
+       "ZMB      2002-01-01           2071.0  \n",
+       "ZWE      2002-01-01           2054.0  \n",
+       "\n",
+       "[152 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sub_set = data[data.index.get_level_values(\"Year\") == \"2002\"]\n",
+    "sub_set"
    ]
   },
   {
@@ -2698,7 +2937,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2712,7 +2951,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
