--- a/Projects/Scratch/Intro to t-tests, ANOVA, and Hypothesis Testing - Brainstorm (4) (3).ipynb
+++ b/Projects/Scratch/Intro to t-tests, ANOVA, and Hypothesis Testing - Brainstorm (4) (3).ipynb
@@ -1513,7 +1513,6 @@
     "import numpy as np\n",
     "from scipy.stats import t\n",
     "\n",
-    "\n",
     "fig, ax = plt.subplots(figsize=(12, 8))\n",
     "t_df = [1, 2, 3, 4, 5, 10, 20]\n",
     "for df in t_df:\n",
@@ -1791,7 +1790,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1805,7 +1804,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
