Major update to Chapter 4, near final, plan to develop Chapter 6, add TS test for autocorrelation

--- a/Textbook/Chapter 7 - Building an OLS Regression Model.ipynb
+++ b/Textbook/Chapter 7 - Building an OLS Regression Model.ipynb
@@ -1049,7 +1049,7 @@
     {
      "data": {
       "text/plain": [
-       "<regression.Regression at 0x1d71cc6a190>"
+       "<regression.Regression at 0x1a717e15820>"
       ]
      },
      "execution_count": 13,
@@ -1444,7 +1444,7 @@
     "        self.add_constant()  \n",
     "    self.build_matrices()\n",
     "    self.estimate_betas_and_yhat()\n",
-    "    \n",
+    "\n",
     "def build_matrices(self):  \n",
     "    # Transform dataframes to matrices  \n",
     "    self.y = np.matrix(self.data[self.y_name][self.min_val:self.max_val])  \n",
@@ -1947,7 +1947,7 @@
     "    self.lost_degrees_of_freedom = len(self.estimates)  \n",
     "    self.num_obs = self.max_val + 1 - self.min_val  \n",
     "    self.degrees_of_freedom = self.num_obs - self.lost_degrees_of_freedom  \n",
-    "         \n",
+    "\n",
     "def calculate_estimator_variance(self):  \n",
     "    # estimator variance is the sse normalized by the degrees of freedom  \n",
     "    # thus, estimator variance increases as the number of exogenous  \n",
@@ -2210,7 +2210,7 @@
     "    self.calculate_estimator_variance()\n",
     "    self.calculate_covariance_matrix()\n",
     "    self.calculate_t_p_error_stats()\n",
-    "    \n",
+    "\n",
     "def calculate_t_p_error_stats(self):\n",
     "    ratings = [.05, .01, .001]  \n",
     "    results = self.estimates  \n",
@@ -2814,7 +2814,7 @@
     "    self.estimate_betas_and_yhat()\n",
     "    self.calculate_regression_stats()\n",
     "    self.save_output()\n",
-    "    \n",
+    "\n",
     "def save_output(self):  \n",
     "    self.reg_history[self.reg_name] = {\"Reg Stats\": self.stats_DF.copy(),  \n",
     "                                    \"Estimates\": self.estimates.copy(),  \n",
@@ -3234,6 +3234,163 @@
     "reg_name = \"RGDP Per Capita Restricted\"\n",
     "plot_scatter_with_estimator(\"Restricted\", reg.reg_history[reg_name]\\\n",
     "                            [\"Data\"], x_vars, y_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Reg Stats':            Estimation Statistics\n",
+       " r**2                    0.009564\n",
+       " Adj. r**2               0.007018\n",
+       " f-stat                  3.756514\n",
+       " Est Var                 0.004486\n",
+       " rootMSE                 0.066980\n",
+       " SSE                     8.725899\n",
+       " SSR                     0.084265\n",
+       " SST                     8.810164\n",
+       " Obs.                 1951.000000\n",
+       " DOF                  1945.000000,\n",
+       " 'Estimates':                                   Coefficient        SE     t-stat  p-value  \\\n",
+       " y = RGDP Per Capita                                                           \n",
+       " Size of Government                   0.003083  0.004366   0.706225  0.48013   \n",
+       " Legal System & Property Rights       0.015174  0.005736   2.645647  0.00822   \n",
+       " Sound Money                          0.007828  0.003395   2.305558  0.02124   \n",
+       " Freedom to trade internationally     0.008628  0.005220   1.653027  0.09849   \n",
+       " Regulation                           0.001067  0.005252   0.203203  0.83900   \n",
+       " Constant                             0.033633  0.001534  21.923702  0.00000   \n",
+       " \n",
+       "                                  signficance  \n",
+       " y = RGDP Per Capita                           \n",
+       " Size of Government                            \n",
+       " Legal System & Property Rights            **  \n",
+       " Sound Money                                *  \n",
+       " Freedom to trade internationally              \n",
+       " Regulation                                    \n",
+       " Constant                                 ***  ,\n",
+       " 'Cov Matrix':                                   Size of Government  \\\n",
+       " Size of Government                      1.906139e-05   \n",
+       " Legal System & Property Rights         -1.300833e-06   \n",
+       " Sound Money                             1.590275e-07   \n",
+       " Freedom to trade internationally       -6.509690e-07   \n",
+       " Regulation                             -1.064335e-06   \n",
+       " Constant                               -7.380264e-08   \n",
+       " \n",
+       "                                   Legal System & Property Rights  \\\n",
+       " Size of Government                                 -1.300833e-06   \n",
+       " Legal System & Property Rights                      3.289710e-05   \n",
+       " Sound Money                                        -1.101173e-07   \n",
+       " Freedom to trade internationally                   -2.550479e-06   \n",
+       " Regulation                                         -5.374810e-06   \n",
+       " Constant                                           -5.684848e-08   \n",
+       " \n",
+       "                                    Sound Money  \\\n",
+       " Size of Government                1.590275e-07   \n",
+       " Legal System & Property Rights   -1.101173e-07   \n",
+       " Sound Money                       1.152675e-05   \n",
+       " Freedom to trade internationally -1.891762e-06   \n",
+       " Regulation                       -7.218435e-07   \n",
+       " Constant                         -5.570983e-07   \n",
+       " \n",
+       "                                   Freedom to trade internationally  \\\n",
+       " Size of Government                                   -6.509690e-07   \n",
+       " Legal System & Property Rights                       -2.550479e-06   \n",
+       " Sound Money                                          -1.891762e-06   \n",
+       " Freedom to trade internationally                      2.724497e-05   \n",
+       " Regulation                                           -1.395903e-06   \n",
+       " Constant                                              2.386893e-07   \n",
+       " \n",
+       "                                     Regulation      Constant  \n",
+       " Size of Government               -1.064335e-06 -7.380264e-08  \n",
+       " Legal System & Property Rights   -5.374810e-06 -5.684848e-08  \n",
+       " Sound Money                      -7.218435e-07 -5.570983e-07  \n",
+       " Freedom to trade internationally -1.395903e-06  2.386893e-07  \n",
+       " Regulation                        2.758832e-05 -7.685789e-07  \n",
+       " Constant                         -7.685789e-07  2.353390e-06  ,\n",
+       " 'Data':                           EFW  Size of Government  \\\n",
+       " ISO_Code Year                                       \n",
+       " AGO      2007-01-01  0.097233           -0.103686   \n",
+       "          2008-01-01  0.000438            0.068152   \n",
+       "          2009-01-01  0.377086            1.797574   \n",
+       "          2010-01-01  0.014898           -1.366275   \n",
+       "          2011-01-01 -0.113957            0.096683   \n",
+       " ...                       ...                 ...   \n",
+       " ZWE      2011-01-01  0.468524           -0.089482   \n",
+       "          2012-01-01  0.127751            0.245839   \n",
+       "          2013-01-01  0.275532           -0.345364   \n",
+       "          2014-01-01  0.335754            0.108060   \n",
+       "          2015-01-01  0.562852           -0.030393   \n",
+       " \n",
+       "                      Legal System & Property Rights  Sound Money  \\\n",
+       " ISO_Code Year                                                      \n",
+       " AGO      2007-01-01                        0.022720     0.392129   \n",
+       "          2008-01-01                        0.084915     0.579510   \n",
+       "          2009-01-01                       -0.031306     0.205423   \n",
+       "          2010-01-01                        0.050092     0.331967   \n",
+       "          2011-01-01                       -0.087293     0.101526   \n",
+       " ...                                             ...          ...   \n",
+       " ZWE      2011-01-01                        0.117425     2.137198   \n",
+       "          2012-01-01                        0.069279     1.269544   \n",
+       "          2013-01-01                       -0.437177     1.516788   \n",
+       "          2014-01-01                        0.039756     1.071268   \n",
+       "          2015-01-01                        0.204776     0.213380   \n",
+       " \n",
+       "                      Freedom to trade internationally  Regulation  \\\n",
+       " ISO_Code Year                                                       \n",
+       " AGO      2007-01-01                         -0.043488    0.218491   \n",
+       "          2008-01-01                         -0.427486   -0.302899   \n",
+       "          2009-01-01                          0.123869   -0.210128   \n",
+       "          2010-01-01                          0.377986    0.680722   \n",
+       "          2011-01-01                          0.020767   -0.701467   \n",
+       " ...                                               ...         ...   \n",
+       " ZWE      2011-01-01                          0.458951   -0.281474   \n",
+       "          2012-01-01                         -0.234468   -0.711440   \n",
+       "          2013-01-01                          0.456781    0.186630   \n",
+       "          2014-01-01                          0.320035    0.139653   \n",
+       "          2015-01-01                         -0.229403    2.655899   \n",
+       " \n",
+       "                      RGDP Per Capita  RGDP Per Capita Lag  Constant  \\\n",
+       " ISO_Code Year                                                         \n",
+       " AGO      2007-01-01         0.165862             0.354935         1   \n",
+       "          2008-01-01         0.188935             0.165862         1   \n",
+       "          2009-01-01        -0.175055             0.188935         1   \n",
+       "          2010-01-01         0.229470            -0.175055         1   \n",
+       "          2011-01-01         0.250936             0.229470         1   \n",
+       " ...                              ...                  ...       ...   \n",
+       " ZWE      2011-01-01         0.063158             0.072235         1   \n",
+       "          2012-01-01         0.071287             0.063158         1   \n",
+       "          2013-01-01         0.109673             0.071287         1   \n",
+       "          2014-01-01        -0.002221             0.109673         1   \n",
+       "          2015-01-01        -0.021146            -0.002221         1   \n",
+       " \n",
+       "                      RGDP Per Capita estimator  \n",
+       " ISO_Code Year                                   \n",
+       " AGO      2007-01-01                   0.036585  \n",
+       "          2008-01-01                   0.035656  \n",
+       "          2009-01-01                   0.041153  \n",
+       "          2010-01-01                   0.036766  \n",
+       "          2011-01-01                   0.032831  \n",
+       " ...                                        ...  \n",
+       " ZWE      2011-01-01                   0.055527  \n",
+       "          2012-01-01                   0.042597  \n",
+       "          2013-01-01                   0.041947  \n",
+       "          2014-01-01                   0.045865  \n",
+       "          2015-01-01                   0.039172  \n",
+       " \n",
+       " [1950 rows x 10 columns]}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg.reg_history[reg_name]"
    ]
   },
   {
