Dictionaries and Dataframes Lesson

--- a/In Class Projects/Project 3 - Dictionaries and Dataframes.ipynb
+++ b/In Class Projects/Project 3 - Dictionaries and Dataframes.ipynb
@@ -111,7 +111,7 @@
     "        \"noun\":\"refers to a period of time while one was running\"},\n",
     "       \"walk\" :\n",
     "       {\"verb\" : \"to move slowly, leisurely by foot\",\n",
-    "        \"noun\": \"refers to a period of time while one was walking\"}}\n",
+    "        \"dctnoun\": \"refers to a period of time while one was walking\"}}\n",
     "dct"
    ]
   },
