--- a/In Class Projects/Reference Sheet for Github.ipynb
+++ b/In Class Projects/Reference Sheet for Github.ipynb
@@ -41,8 +41,8 @@
     "\n",
     "To link the git software to your github account, enter your username and email using the commands\n",
     "\n",
-    "* *git config --global user.name \"Your Name\"*\n",
-    "* *git config --global user.email \"YourAddress@email.com\"*\n",
+    "* *git config --global user.name \"jlcatonjr\"*\n",
+    "* *git config --global user.email \"jlcatonjr@gmail.com\"*\n",
     "\n",
     "Next, you need to set up your SSH key for security purposes. Beginning in August 2021, GitHub requires you to us an SSH key. [Watch this tutorial](https://www.youtube.com/embed/WgZIv5HI44o) on YouTube, or run the cell and press play below if you are viewing in Jupyter. \n",
     "\n"
