--- a/In Class Demonstrations/Project 3 - Dictionaries and Dataframes.ipynb
+++ b/In Class Demonstrations/Project 3 - Dictionaries and Dataframes.ipynb
@@ -11383,7 +11383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Divide the dataframe between Phone Numbers and All Remaing Columns"
+    "### Divide the dataframe between Phone Numbers and All Remaining Columns"
    ]
   },
   {
@@ -12099,6 +12099,35 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "8170dbc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['701-231-7471', '701-231-7379', '701-231-8672', '701-231-7442',\n",
+       "       '701-231-7337', '701-231-9797', '701-231-6641', '701-231-7393',\n",
+       "       '701-231-5747', '701-231-8103', '701-231-6494', '701-231-7832',\n",
+       "       '701-231-5374', '701-730-0940', '701-231-6642', '701-231-1871',\n",
+       "       '701-231-8819', '701-231-8642', '701-231-8883', '701-231-9519',\n",
+       "       '701-231-7441', '701-231-8587', '701-231-7377', '701-231-8248',\n",
+       "       '701-231-7469', '701-231-5882', '701-231-7470', '701-231-5265',\n",
+       "       '701-231-9796', '701-231-6189', '701-231-7448', '701-231-7441',\n",
+       "       '701-231-7443', '701-231-7452', '701-231-7472'], dtype=object)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phone_numbers[\"Phone\"][1::3].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "62cac60d",
    "metadata": {},
    "outputs": [
@@ -12106,7 +12135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_36224\\3050883492.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_17068\\3050883492.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -12439,7 +12468,7 @@
        "Wilson, William               William.Wilson@ndsu.edu   701-231-7472  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
