--- a/In Class Projects/Project 4 - Chapter 3 - Introduction to numpy, pandas, and matplotlib.ipynb
+++ b/In Class Projects/Project 4 - Chapter 3 - Introduction to numpy, pandas, and matplotlib.ipynb
@@ -1761,7 +1761,6 @@
    "source": [
     "income_data[\"% in Bracket\"] = income_data[\"Households in Bracket\"].div(income_data[\"Households in Bracket\"].sum()).mul(100)\n",
     "income_data[\"Cumulative %\"] = income_data[\"% in Bracket\"].cumsum()\n",
-    "income_data = income_data.fillna(0)\n",
     "income_data.head()"
    ]
   },
@@ -1819,7 +1818,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1942,8 +1943,10 @@
     "income_25k_bin = income_data.loc[::5]\n",
     "income_25k_bin[\"Households in Bracket\"] = income_25k_bin[\"Cumulative\"]\n",
     "income_25k_bin.loc[\"250k+\"] = income_data.iloc[-1]\n",
-    "income_25k_bin.loc[\"250k+\"][\"Households in Bracket\"] = income_25k_bin.loc[\"250k+\"][\"Cumulative\"] \n",
-    "income_25k_bin[\"Households in Bracket\"]= income_25k_bin[\"Households in Bracket\"].diff()\n",
+    "income_25k_bin.loc[\"250k+\"][\"Households in Bracket\"] = income_25k_bin.loc[\n",
+    "    \"250k+\"][\"Cumulative\"] \n",
+    "income_25k_bin[\"Households in Bracket\"]= income_25k_bin[\n",
+    "    \"Households in Bracket\"].diff()\n",
     "# income_25k_bin[\"% in Bracket\"] = income_25k_bin[\"Households in Bracket\"].div(income_25k_bin[\"Households in Bracket\"].sum()).mul(100)\n",
     "income_25k_bin.fillna(0, inplace = True)\n",
     "income_25k_bin.head()"
@@ -2010,27 +2013,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What other feature would be useful to include in these functions? What about parameters for different font sizes, size and colors of points and lines in scatter plots?\n",
-    "\n",
-    "### Exercises:\n",
-    "\n",
-    "1. Create an array with (100) elements using np.arange()\n",
-    "\n",
-    "2. Create two numpy arrays whose values are neither all 0 or 1. Multiply the two arrays and save the result i.e., result = array1 * array2.\n",
-    "\n",
-    "3. Create a dictionary where each key points to a unique numpy array. All arrays should be of the same length. Then transform that dictionary into a pandas dataframe.\n",
-    "\n",
-    "4. Import a data set for your project in pandas. You may use whatever means you prefer to import the data. Print the dataframe.\n",
-    "\n",
-    "5. Create a new column of data derived from the data that you have already imported. hint: this may be a ratio or whatever transformation that you think would be useful...\n",
-    "\n",
-    "6. Use a for loop to print individually each column in the dataframe.\n",
-    "\n",
-    "7. Create a function that plots 2 to 3 different variables from the dataframe. The function may look something like \"def plot_data(df,names, etc...). Each plot should include a legend and title.\n",
-    "\n",
-    "8. Create a bar graph plot using the data you have imported.\n",
-    "\n",
-    "9. On any of the graphs you have created, change the font size, axis labels, tick labels, color, linewidth, and so forth. Adjust these parameters to make the visualization aesthetically appealing..\n"
+    "What other feature would be useful to include in these functions? What about parameters for different font sizes, size and colors of points and lines in scatter plots?"
    ]
   },
   {
