--- a/In Class Projects/Project 4 - Chapter 3 - Introduction to numpy, pandas, and matplotlib.ipynb
+++ b/In Class Projects/Project 4 - Chapter 3 - Introduction to numpy, pandas, and matplotlib.ipynb
@@ -2014,11 +2014,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "What other feature would be useful to include in these functions? What about parameters for different font sizes, size and colors of points and lines in scatter plots?\n",
+    "\n",
+    "### Exercises:\n",
+    "\n",
+    "1. Create an array with (100) elements using np.arange()\n",
+    "\n",
+    "2. Create two numpy arrays whose values are neither all 0 or 1. Multiply the two arrays and save the result i.e., result = array1 * array2.\n",
+    "\n",
+    "3. Create a dictionary where each key points to a unique numpy array. All arrays should be of the same length. Then transform that dictionary into a pandas dataframe.\n",
+    "\n",
+    "4. Import a data set for your project in pandas. You may use whatever means you prefer to import the data. Print the dataframe.\n",
+    "\n",
+    "5. Create a new column of data derived from the data that you have already imported. hint: this may be a ratio or whatever transformation that you think would be useful...\n",
+    "\n",
+    "6. Use a for loop to print individually each column in the dataframe.\n",
+    "\n",
+    "7. Create a function that plots 2 to 3 different variables from the dataframe. The function may look something like \"def plot_data(df,names, etc...). Each plot should include a legend and title.\n",
+    "\n",
+    "8. Create a bar graph plot using the data you have imported.\n",
+    "\n",
+    "9. On any of the graphs you have created, change the font size, axis labels, tick labels, color, linewidth, and so forth. Adjust these parameters to make the visualization aesthetically appealing..\n"
+   ]
   }
  ],
  "metadata": {
