--- a/Textbook/Chapter 8 - Advanced Data Analysis.ipynb
+++ b/Textbook/Chapter 8 - Advanced Data Analysis.ipynb
@@ -3998,7 +3998,7 @@
  "metadata": {
   "hide_code_all_hidden": true,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4012,7 +4012,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
