OLS equation error

--- a/Textbook/Chapter 7 - Building an OLS Regression Model.ipynb
+++ b/Textbook/Chapter 7 - Building an OLS Regression Model.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "$y = \\alpha + \\beta_1x_1 + \\mu $\n",
     "\n",
-    "$\\beta_0 = \\alpha + \\mu$\n",
+    "$\\beta_0 + e = \\alpha + \\mu$\n",
     "\n",
     "We merge the error term, which represents bias in the data, with alpha to yield the constant, $\\beta_0$. This is necessary since OLS assumes an unbiased estimator where:\n",
     "\n",
