--- a/Textbook/Chapter 7 - Building an OLS Regression Model.ipynb
+++ b/Textbook/Chapter 7 - Building an OLS Regression Model.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "$\\beta_0 + e = \\alpha + \\mu$\n",
     "\n",
-    "We merge the error term, which represents bias in the data, with alpha to yield the constant, $\\beta_0$. This is necessary since OLS assumes an unbiased estimator where:\n",
+    "We merge the error term $\\mu$ with $\\alpha$ to yield the constant, $\\beta_0$ and the estimate of the error term, $\\e$. This is necessary since OLS assumes an unbiased estimator where:\n",
     "\n",
     "$\\sum_{i=0}^{n-1} e_{i}=0$\n",
     "\n",
