--- a/Textbook/Chapter 7 - Building an OLS Regression Model.ipynb
+++ b/Textbook/Chapter 7 - Building an OLS Regression Model.ipynb
@@ -15,19 +15,19 @@
     "\n",
     "$y = \\alpha + \\beta_1x_1 + \\mu $\n",
     "\n",
-    "$\\beta_0 + e = \\alpha + \\mu$\n",
     "\n",
-    "We merge the error term $\\mu$ with $\\alpha$ to yield the constant, $\\beta_0$ and the estimate of the error term, $\\e$. This is necessary since OLS assumes an unbiased estimator where:\n",
+    "\n",
+    "We use estimators for the error term $\\mu$, $\\alpha$, and $\\beta_1$. This is necessary since OLS assumes an unbiased estimator where:\n",
     "\n",
     "$\\sum_{i=0}^{n-1} e_{i}=0$\n",
     "\n",
     "Each estimate of a point created from a particular observation takes the form.\n",
     "\n",
-    "$y_i = \\beta_0 + \\beta_1x_{1,i} + e_i$\n",
+    "$\\hat{y}_i = \\hat{\\beta}_0 + \\hat{\\beta_1}x_{1,i} + e_i$\n",
     "\n",
     "This can be generalized to include k exogenous variables:\n",
     "\n",
-    "$y_i = \\beta_0 + (\\sum_{j=1}^{k} \\beta_jx_{i,j}) + e_i$\n",
+    "$\\hat{y}_i = \\beta_0 + (\\sum_{j=1}^{k} \\beta_jx_{i,j}) + e_i$\n",
     "\n",
     "Ideally, we want to form a prediction where, on average, the right-hand side of the equation  yields the correct value on the left-hand side. When we perform an OLS regression, we form a predictor that minimizes the sum of the distance between each predicted value and the observed value drawn from the data. For example, if the prediction for a particular value of y is 8, and the actual value is 10, the error of the prediction is -2 and the squared error is 4.\n",
     "\n",
