--- a/Projects/Federal Reserve Data/Yield Curve (Daily Data).ipynb
+++ b/Projects/Federal Reserve Data/Yield Curve (Daily Data).ipynb
@@ -4885,7 +4885,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4899,7 +4899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
