in class demonstration update

--- a/Projects/SMP Data/Inflation - What Causes It, and When Will It Subside.ipynb
+++ b/Projects/SMP Data/Inflation - What Causes It, and When Will It Subside.ipynb
@@ -4,17 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\JLCat\\AppData\\Roaming\\Python\\Python39\\site-packages\\outdated\\utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
-      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
-      "  return warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -179,6 +169,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\JLCat\\AppData\\Roaming\\Python\\Python39\\site-packages\\outdated\\utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n",
       "C:\\Users\\JLCat\\AppData\\Roaming\\Python\\Python39\\site-packages\\outdated\\utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.1, the latest is 0.5.3.\n",
       "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
       "  return warn(\n"
@@ -252,15 +245,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\2133968727.py:19: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\2133968727.py:19: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels([round(y,1) for y in ax.get_yticks()], color = \"C0\")\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\2133968727.py:20: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\2133968727.py:20: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax2.set_yticklabels([round(y,2) for y in ax2.get_yticks()], color = \"C1\")\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\2133968727.py:38: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\2133968727.py:38: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(ax.get_xticks(), rotation = 90)\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\2133968727.py:44: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\2133968727.py:44: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels([round(y,1) for y in ax.get_yticks()], color = \"C0\")\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\2133968727.py:45: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\2133968727.py:45: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax2.set_yticklabels([round(y,1) for y in ax2.get_yticks()], color = \"C1\")\n"
      ]
     },
@@ -348,11 +341,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\4265591841.py:9: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\4265591841.py:9: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(ax.get_xticks(), rotation = 90)\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\4265591841.py:16: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\4265591841.py:16: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels([round(y,1) for y in ax.get_yticks()], color = \"C0\")\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\4265591841.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\4265591841.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax2.set_yticklabels([round(y,1) for y in ax2.get_yticks()], color = \"C1\")\n"
      ]
     },
@@ -409,28 +402,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\1217839381.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\1217839381.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  plot_df[\"$V_C$\"] = plot_df[\"Nominal GDP\"].div(plot_df[\"Currency in Circulation\"])\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\1217839381.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\1217839381.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  plot_df[plot_vars[2]] = df[plot_vars[2]]\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\1217839381.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\1217839381.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  plot_df.dropna(inplace = True)\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\1217839381.py:16: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\1217839381.py:16: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(ax.get_xticks(), rotation = 90)\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\1217839381.py:22: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\1217839381.py:22: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels([str(round(y,1)) + \"%\" for y in ax.get_yticks()], color = \"C0\")\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\1217839381.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\1217839381.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax2.set_yticklabels([round(y,1) for y in ax2.get_yticks()], color = \"C1\")\n"
      ]
     },
@@ -521,16 +514,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\1200430645.py:9: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\1200430645.py:9: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels(ax.get_yticks(), color = \"C0\")\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\1200430645.py:12: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\1200430645.py:12: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax2.set_yticklabels(ax2.get_yticks(), color = \"C1\")\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x18c32f633a0>"
+       "<matplotlib.lines.Line2D at 0x13e9ff33b20>"
       ]
      },
      "execution_count": 8,
@@ -595,13 +588,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\2910154158.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\2910154158.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  plot_df[\"$V_C$\"] = df[\"Nominal GDP\"].div(plot_df[\"Currency in Circulation\"])\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\2910154158.py:16: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\2910154158.py:16: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels([round(x*100,2) for x in ax.get_xticks()], rotation = 90)\n"
      ]
     },
@@ -660,17 +653,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\3193149341.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\3193149341.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  plot_df[\"Nominal GDP\"] = plot_df[\"Nominal GDP\"].pct_change(4)\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\3193149341.py:11: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\3193149341.py:11: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(ax.get_xticks(), rotation = 90)\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\3193149341.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\3193149341.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels([str(round(y * 100,1)) + \"%\" for y in ax.get_yticks()], color = \"C0\")\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\3193149341.py:18: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\3193149341.py:18: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax2.set_yticklabels([round(y,1) for y in ax2.get_yticks()], color = \"C1\")\n"
      ]
     },
@@ -733,7 +726,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\579977854.py:7: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\579977854.py:7: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels([str(round(y * 100,0)) + \"%\" for y in ax.get_yticks()])\n"
      ]
     },
@@ -784,7 +777,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\2772897060.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\2772897060.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels([str(round(y * 100,0)) + \"%\" for y in ax.get_yticks()])\n"
      ]
     },
@@ -832,7 +825,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_19128\\928125326.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_20744\\928125326.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels([str(round(y * 100,0)) + \"%\" for y in ax.get_yticks()])\n"
      ]
     },
