--- a/Projects/EFWNorthAmerica/Untitled.ipynb
+++ b/Projects/EFWNorthAmerica/Untitled.ipynb
@@ -7,8 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import beaapi\n",
-    "key = '1FD5DC35-4854-4CE8-8D43-B36065C37041'"
+    "import beaapi\n"
    ]
   },
   {
