Intro to Pandas and Matplotlib

--- a/Projects/EFWNorthAmerica/State Tax Data.ipynb
+++ b/Projects/EFWNorthAmerica/State Tax Data.ipynb
@@ -458,6 +458,131 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "0a459cd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['State',\n",
+       " 1985,\n",
+       " 1990,\n",
+       " 1995,\n",
+       " 2000,\n",
+       " 2001,\n",
+       " 2002,\n",
+       " 2003,\n",
+       " 2004,\n",
+       " 2005,\n",
+       " 2006,\n",
+       " 2007,\n",
+       " 2008,\n",
+       " 2009,\n",
+       " 2010,\n",
+       " 2011,\n",
+       " 2012,\n",
+       " 2013,\n",
+       " 2014,\n",
+       " 2015,\n",
+       " 2016,\n",
+       " 2017,\n",
+       " 2018,\n",
+       " 2019,\n",
+       " 2020,\n",
+       " 'Unnamed: 25',\n",
+       " 'Area 1-allg  Scores',\n",
+       " '1985.1',\n",
+       " '1990.1',\n",
+       " '1995.1',\n",
+       " '2000.1',\n",
+       " '2001.1',\n",
+       " '2002.1',\n",
+       " '2003.1',\n",
+       " '2004.1',\n",
+       " '2005.1',\n",
+       " '2006.1',\n",
+       " '2007.1',\n",
+       " '2008.1',\n",
+       " '2009.1',\n",
+       " '2010.1',\n",
+       " '2011.1',\n",
+       " '2012.1',\n",
+       " '2013.1',\n",
+       " '2014.1',\n",
+       " '2015.1',\n",
+       " '2016.1',\n",
+       " '2017.1',\n",
+       " '2018.1',\n",
+       " '2019.1',\n",
+       " '2020.1',\n",
+       " 'Unnamed: 51',\n",
+       " 'Area 2-allg  Scores',\n",
+       " '1985.2',\n",
+       " '1990.2',\n",
+       " '1995.2',\n",
+       " '2000.2',\n",
+       " '2001.2',\n",
+       " '2002.2',\n",
+       " '2003.2',\n",
+       " '2004.2',\n",
+       " '2005.2',\n",
+       " '2006.2',\n",
+       " '2007.2',\n",
+       " '2008.2',\n",
+       " '2009.2',\n",
+       " '2010.2',\n",
+       " '2011.2',\n",
+       " '2012.2',\n",
+       " '2013.2',\n",
+       " '2014.2',\n",
+       " '2015.2',\n",
+       " '2016.2',\n",
+       " '2017.2',\n",
+       " '2018.2',\n",
+       " '2019.2',\n",
+       " '2020.2',\n",
+       " 'Unnamed: 77',\n",
+       " 'Area 3-allg  Scores',\n",
+       " '1985.3',\n",
+       " '1990.3',\n",
+       " '1995.3',\n",
+       " '2000.3',\n",
+       " '2001.3',\n",
+       " '2002.3',\n",
+       " '2003.3',\n",
+       " '2004.3',\n",
+       " '2005.3',\n",
+       " '2006.3',\n",
+       " '2007.3',\n",
+       " '2008.3',\n",
+       " '2009.3',\n",
+       " '2010.3',\n",
+       " '2011.3',\n",
+       " '2012.3',\n",
+       " '2013.3',\n",
+       " '2014.3',\n",
+       " '2015.3',\n",
+       " '2016.3',\n",
+       " '2017.3',\n",
+       " '2018.3',\n",
+       " '2019.3',\n",
+       " '2020.3',\n",
+       " 'Unnamed: 103',\n",
+       " 'Unnamed: 104']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(efw.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "d4e0360f",
    "metadata": {},
